--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,63 @@
-.background-header img {
-    width: 100%;
+@font-face {
+    font-family: "Josefin";
+    src: url("../font/Josefin_Sans/static/JosefinSans-Regular.ttf");
+    font-weight: 400;
+}
+@font-face {
+    font-family: "Josefin";
+    src: url("../font/Josefin_Sans/static/JosefinSans-Bold.ttf");
+    font-weight: 700;
 }
 
+html, body{
+    margin: 0;
+    padding: 0;
+    font-family: "Josefin", sans-serif;
+    font-size: 62.5%;
+    box-sizing: border-box;
+}
+.container {
+    position: relative;
+}
+.background-header img{
+    width: 100%;
+}
+section {
+    position:absolute;
+    z-index: 3;
+    top: 2rem;
+    font-size: 1.8rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.to-do-container {
+
+}
+.to-to-header {
+    display: flex;
+    justify-content: space-between;
+}
+.to-to-header h1 {
+    text-transform: uppercase;
+    color: hsl(0, 0%, 98%);
+}
+.icon-wrapper {
+    display: flex;
+    align-items: center;
+}
+.icon {
+    width: 80%;
+}
+.todo-input {
+    font-size: 1.8rem;
+    padding: 0.8rem;
+    color: hsl(233, 14%, 35%);
+    
+}
+input[type="checkbox"] {
+    
+}
 
 
 .attribution { 
